# iotedge

edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Core/: Microsoft.Azure.Devices.Edge.Agent.Core.csproj
edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Edgelet/: IDeviceManager.cs  ModuleManagementHttpClient.cs
edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.IoTHub/: EdgeAgentConnection.cs  Microsoft.Azure.Devices.Edge.Agent.IoTHub.csproj
edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Service/: Microsoft.Azure.Devices.Edge.Agent.Service.csproj  Program.cs  appsettings_agent.json
edge-modules/DirectMethodCloudSender/: DirectMethodCloudSender.csproj
edge-modules/DirectMethodReceiver/: DirectMethodReceiver.csproj
edge-modules/DirectMethodSender/: DirectMethodSender.csproj
edge-modules/MessagesAnalyzer/: MessagesAnalyzer.csproj
edge-modules/ModuleLib/: Microsoft.Azure.Devices.Edge.ModuleUtil.csproj
edge-modules/SimulatedTemperatureSensor/: SimulatedTemperatureSensor.csproj
edge-modules/TemperatureFilter/: TemperatureFilter.csproj
edge-modules/load-gen/: load-gen.csproj
edgelet/: .gitignore  Cargo.toml
edgelet/api/: externalProvisioningVersion_2019_04_10.yaml  hostingVersion_2019_04_10.yaml
edgelet/edgelet-hosting/: Cargo.toml
edgelet/edgelet-hosting/src/: crypto.rs  error.rs  hosting.rs  lib.rs
edgelet/edgelet-http-hosting/: Cargo.toml
edgelet/hosting/: Cargo.toml  README.md
edgelet/hsm-sys/: build.rs
edgelet/iotedged/: Cargo.toml
edgelet/provisioning/: Cargo.toml
smoke/IotEdgeQuickstart/: IotEdgeQuickstart.csproj
(+106 files in other folders)
