[package]
name = "edgelet-hosting"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
bytes = "0.4"
chrono = "0.4"
failure = "0.1"

edgelet-core = { path = "../edgelet-core"}
edgelet-http = { path = "../edgelet-http" }
edgelet-http-hosting = { path = "../edgelet-http-hosting"}

[dev-dependencies]
base64 = "0.9"
hmac = "0.5.0"
sha2 = "0.7.0"
